# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "nodejs_test", "pkg_npm")
load("//tools:copy_to_dist.bzl", "copy_to_dist")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")

package(default_visibility = ["//visibility:public"])

nodejs_test(
    name = "tfjs-converter_test",
    data = [
        "//tfjs-converter:metadata_json",
        "//tfjs-converter:package_json",
        "//tfjs-converter/src:tfjs-converter_test_lib",
    ],
    entry_point = "//tfjs-converter/src:run_tests.ts",
    link_workspace_root = True,
    tags = ["ci"],
)

tfjs_bundle(
    name = "tf-converter",
    entry_point = "//tfjs-converter/src:index.ts",
    external = [
        "@tensorflow/tfjs-core",
    ],
    globals = {
        "@tensorflow/tfjs-core": "tf",
    },
    umd_name = "tf",
    deps = [
        "//tfjs-converter/src:tfjs-converter_lib",
        "//tfjs-converter/src:tfjs-converter_src_lib",
    ],
)

filegroup(
    name = "es6_sources",
    srcs = [
        "//tfjs-converter/src:tfjs-converter_lib",
        "//tfjs-converter/src:tfjs-converter_src_lib",
    ],
    output_group = "es6_sources",
)

filegroup(
    name = "es5_sources",
    srcs = [
        "//tfjs-converter/src:tfjs-converter_lib",
        "//tfjs-converter/src:tfjs-converter_src_lib",
    ],
    output_group = "es5_sources",
)

copy_to_dist(
    name = "copy_src_to_dist",
    srcs = [
        ":es5_sources",
        ":es6_sources",
        "//tfjs-converter/src:tfjs-converter_lib",
        "//tfjs-converter/src:tfjs-converter_src_lib",
    ],
    root = "src",
)

copy_to_dist(
    name = "copy_bundles",
    srcs = [
        ":tf-converter",
        ":tf-converter.es2017",
        ":tf-converter.es2017.min",
        ":tf-converter.fesm",
        ":tf-converter.fesm.min",
        ":tf-converter.min",
    ],
)

pkg_npm(
    name = "tfjs-converter_pkg",
    srcs = ["package.json"],
    tags = ["ci"],
    deps = [
        ":copy_bundles",
        ":copy_src_to_dist",
    ],
)

js_library(
    name = "package_json",
    srcs = [
        ":package.json",
    ],
)

js_library(
    name = "metadata_json",
    srcs = [
        "metadata/kernel2op.json",
    ],
)
