# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@npm//@bazel/concatjs:index.bzl", "karma_web_test")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm", "js_library")


package(default_visibility = ["//visibility:public"])

# Allow typescript rules in any package to reference this file
exports_files(["tsconfig.json", "package.json"])

tfjs_bundle(
    name = "tf-core",
    umd_name = "tf",
    entry_point = "//tfjs-core/src:index.ts",
    external = [
        "node-fetch",
        "util",
    ],
    deps = [
        "//tfjs-core/src:tfjs-core_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
    ],
)

PKG_DEPS = [
    ":tf-core",
    ":tf-core.min",
    ":tf-core.es2017",
    ":tf-core.es2017.min",
    ":tf-core.fesm",
    ":tf-core.fesm.min",
    ":tf-core.node",
    "//tfjs-core/src:tfjs-core_lib",
    "//tfjs-core/src:tfjs-core_src_lib",
]

pkg_npm(
    name = "tfjs-core_pkg",
    srcs = ["package.json"],
    deps = PKG_DEPS,
)

karma_web_test(
    name = "tfjs-core_test",
    srcs = [
        "//tfjs-core/src:tfjs-core_test_bundle"
    ],
    static_files = [
        # Listed here so sourcemaps are served
        "//tfjs-core/src:tfjs-core_test_bundle"
    ],
    tags = ["native"],
)

karma_web_test(
    name = "browserstack_tfjs-core_test",
    srcs = [
        "//tfjs-core/src:tfjs-core_test_bundle"
    ],
    config_file = "//:karma.conf.js",
    peer_deps = [
        "@npm//karma",
        "@npm//karma-jasmine",
        "@npm//karma-requirejs",
        "@npm//karma-sourcemap-loader",
        "@npm//requirejs",
        # The above dependencies are the default when 'peer_deps' is not
        # specified. They are manually spefied here so we can append
        # karma-browserstack-launcher.
        "@npm//karma-browserstack-launcher",
    ],
    static_files = [
        # Listed here so sourcemaps are served
        "//tfjs-core/src:tfjs-core_test_bundle"
    ],
    tags = ["ci"],
)

# This is necessary for //tfjs-core/src:tfjs-core_test_bundle to have acess to
# the package.json so src/version_test.ts can 'require()' it.
js_library(
    name = "package_json",
    srcs = [
        ":package.json",
    ],
)
