# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "nodejs_test", "pkg_npm")
load("//tools:copy_to_dist.bzl", "copy_to_dist", "copy_ts_library_to_dist")
load("//tools:tfjs_bundle.bzl", "tfjs_bundle")
load("//tools:tfjs_web_test.bzl", "tfjs_web_test")

package(default_visibility = ["//visibility:public"])

# Allow typescript rules in any package to reference this file
exports_files([
    "package.json",
    "README.md",
])

# Defined here because chdir must be a subdirectory of the directory the rule is
# defined in.
nodejs_test(
    name = "test_snippets_test",
    chdir = "tfjs-layers",
    data = [
        ":tsconfig.json",
        "//:tsconfig.json",
        "//tfjs-backend-cpu/src:tfjs-backend-cpu_lib",
        "//tfjs-layers/scripts:test_snippets_lib",
        "//tfjs-layers/src:all_srcs",
    ],
    entry_point = "//tfjs-layers/scripts:test_snippets.ts",
    link_workspace_root = True,
    tags = ["ci"],
)

tfjs_web_test(
    name = "tfjs-layers_webgl2_test",
    srcs = [
        "//tfjs-layers/src:tfjs-layers_test_bundle",
    ],
    browsers = [
        "bs_chrome_mac",
        "bs_firefox_mac",
        # disabled android 9 test due to training flakiness
        # "bs_android_9",
        "win_10_chrome",
    ],
    headless = False,
    static_files = [
        # Listed here so sourcemaps are served
        "//tfjs-layers/src:tfjs-layers_test_bundle",
    ],
)

tfjs_web_test(
    name = "tfjs-layers_webgl1_test",
    srcs = [
        "//tfjs-layers/src:tfjs-layers_test_bundle",
    ],
    args = [
        "--testEnv",
        "webgl1",
    ],
    browsers = [
        "bs_safari_mac",
        "bs_ios_11",
    ],
    headless = False,
    static_files = [
        # Listed here so sourcemaps are served
        "//tfjs-layers/src:tfjs-layers_test_bundle",
    ],
)

tfjs_bundle(
    name = "tf-layers",
    entry_point = "//tfjs-layers/src:index.ts",
    external = [
        "@tensorflow/tfjs-core",
    ],
    globals = {
        "@tensorflow/tfjs-core": "tf",
    },
    umd_name = "tf",
    deps = [
        "//tfjs-layers/src:tfjs-layers_lib",
        "//tfjs-layers/src:tfjs-layers_src_lib",
    ],
)

copy_ts_library_to_dist(
    name = "copy_src_to_dist",
    srcs = [
        "//tfjs-layers/src:tfjs-layers_lib",
        "//tfjs-layers/src:tfjs-layers_src_lib",
    ],
    root = "src",
)

copy_to_dist(
    name = "copy_bundles",
    srcs = [
        ":tf-layers",
        ":tf-layers.es2017",
        ":tf-layers.es2017.min",
        ":tf-layers.fesm",
        ":tf-layers.fesm.min",
        ":tf-layers.min",
        ":tf-layers.node",
    ],
)

copy_file(
    name = "copy_miniprogram",
    src = ":tf-layers.min.js",
    out = "dist/miniprogram/index.js",
)

copy_file(
    name = "copy_miniprogram_map",
    src = ":tf-layers.min.js.map",
    out = "dist/miniprogram/index.js.map",
)

pkg_npm(
    name = "tfjs-layers_pkg",
    package_name = "@tensorflow/tfjs-layers",
    srcs = [
        "README.md",
        "package.json",
    ],
    tags = ["ci"],
    deps = [
        ":copy_bundles",
        ":copy_miniprogram",
        ":copy_miniprogram_map",
        ":copy_src_to_dist",
    ],
)

js_library(
    name = "package_json",
    package_name = "tfjs-layers",
    srcs = [
        ":package.json",
    ],
)
