# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("//tools:tfjs_bundle.bzl", "tfjs_bundle", "make_rollup_config")

package(default_visibility = ["//visibility:public"])

# Allow typescript rules in any package to reference this file
exports_files([
    "tsconfig.json",
    "package.json",
])

tfjs_bundle(
    name = "tf-tflite",
    entry_point = "//tfjs-tflite/src:index.ts",
    external = [
        "node-fetch",
        "util",
    ],
    umd_name = "tflite",
    deps = [
        "//tfjs-tflite/src:tfjs-tflite_lib",
        "//tfjs-tflite/src:tfjs-tflite_src_lib",
    ],
)

make_rollup_config(
    name = "test",
    stats = 'tttt',
)
