# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "karma_template.conf.js",
        "rollup_template.config.js",
    ],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "enumerate_tests_lib",
    srcs = [
        "enumerate-tests.ts",
    ],
    deps = [
        "@npm//@types/argparse",
        "@npm//@types/node",
        "@npm//argparse",
    ],
)

nodejs_binary(
    name = "enumerate_tests_bin",
    data = [
        ":enumerate_tests_lib",
    ],
    entry_point = "enumerate-tests.ts",
)
